--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
 }
+@media screen and (max-width: 640px) {
 body{
     min-width: 500px;
 }
@@ -9,11 +10,9 @@ body{
     height: 50px;
     margin: 0.5rem ;
     margin-bottom: 20px;
-
 }
 
-footer{   
-      
+footer{     
     border: 1px black solid;
     background-color:#191516;
     color:#92817a ;
@@ -23,13 +22,14 @@ footer{
 }
 
 .container{
-    display: flex;
-    
-    
+    display: flex;   
 }
+
 .evenly{
     justify-content: space-evenly;    
 }
+
 .between{
     justify-content: space-between;
+ }
 }
