--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
     margin: 0;
     padding: 0;
 }
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 768px) {
 body{
-    min-width: 500px;
+    min-width: 320px;
 }
 .logo{
     height: 50px;
@@ -17,8 +17,8 @@ footer{
     background-color:#191516;
     color:#92817a ;
     padding: 0 ;
-    font-size: 0.7em;
-    height: 10em;
+    font-size: 2.7VW;
+    
 }
 
 .container{
