--- a/style.css
+++ b/style.css
@@ -3,9 +3,7 @@
     padding: 0;
 }
 @media screen and (max-width: 768px) {
-body{
-    min-width: 320px;
-}
+
 .logo{
     height: 50px;
     margin: 0.5rem ;
@@ -17,7 +15,7 @@ footer{
     background-color:#191516;
     color:#92817a ;
     padding: 0 ;
-    font-size: 2.7VW;
+    font-size: 2.5VW;
     
 }
 
@@ -33,3 +31,48 @@ footer{
     justify-content: space-between;
  }
 }
+@media screen and (min-width:1000px) {
+    footer p {
+        font-size: 25px;
+        margin-bottom: 0;
+    }
+    .logo{
+        height: 50px;
+        margin: 0.5rem ;
+        margin-bottom: 20px;
+    }
+}
+.logo{
+    height: 7vw;
+    margin: 0.5rem ;
+    margin-bottom: 1vh;
+}
+
+footer{     
+    border: 1px black solid;
+    background-color:#191516;
+    color:grey;
+    padding: 5px 10px ;
+    font-size: 2VW;
+    
+}
+
+.container{
+    display: flex;   
+}
+
+.evenly{
+    justify-content: space-evenly;
+        
+}
+
+.between{
+    justify-content: space-between;
+    
+ }
+ .center{
+     text-align: center;
+ }
+ .right{
+     text-align: end;
+ }
