--- a/style.css
+++ b/style.css
@@ -18,13 +18,13 @@ nav ul li {
   font-size: 2.3vw;
 }
 
-a:link {
+a {
   text-decoration: none;
-  font-weight: bold;
-  color: yellow;
+  font-family: 'Lobster Two', cursive;
+  color: #daa520;
 }
 
-a:link:hover {
+a:hover {
   color: white;
 }
 @media screen and (min-width: 769px) {
@@ -130,7 +130,7 @@ body {
 
 main {
   background-color: white;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Gayathri", sans-serif;
   font-size: 12px;
 }
 
@@ -148,7 +148,7 @@ main {
 .banner h1 {
   text-align: left;
   font-size: 2rem;
-  font-family: "Cinzel", serif;
+  font-family: 'Lobster Two', cursive;
   
 }
 
@@ -170,7 +170,7 @@ main {
 .introduction h1 {
   font-size: 1, 5rem;
   text-align: center;
-  font-family: "Cinzel", serif;
+  font-family: 'Lobster Two', cursive;
 }
 /*
 .transition{
@@ -195,7 +195,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: "Gayathri", sans-serif;
+  font-family: 'Lobster Two', cursive;
   text-align: center;
   /*background-image: url("pictures/banner_picture_big.jpg");
 	background-size: cover;
